HT04/GRCP/K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: so1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: so1
  template:
    metadata:
      labels:
        app: so1
    spec:
      containers:
      - name: so1-container
        image: gcr.io/so1-tarea4-2025-455121/so1-app
        ports:
        - containerPort: 4000
