HT04/GRCP/K8s/service.yaml
¿apiVersion: v1
kind: Service
metadata:
  name: so1-service
spec:
  selector:
    app: so1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
